--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-
+<script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
     <div class="container">
         <h1>文件上传与分享区 ☁️</h1>
         <p>此页面通过 Netlify Forms 实现文件上传功能。上传的文件将出现在 Netlify 控制台的 Forms 提交记录中。</p>
