--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
+    <h1>你好呀，这是一个demo！<h1>
 <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
     <div class="container">
         <h1>文件上传与分享区 ☁️</h1>
